--- a/HelloWorldTest.ipynb
+++ b/HelloWorldTest.ipynb
@@ -6,6 +6,7 @@
       "name": "HelloWorldTest.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,16 +27,66 @@
     },
     {
       "metadata": {
-        "id": "AckcgR6wveG-",
+        "id": "dGGPC-6-Xgjy",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "print(\"Hello World\")"
+        "import random"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "AckcgR6wveG-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f4dfb03c-a426-4138-d461-777523e91179"
+      },
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello World\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello World\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "TMJejunkXmEV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "c589ea8c-9767-4e65-8fab-593117c58025"
+      },
+      "cell_type": "code",
+      "source": [
+        "print(random.randint(1,10))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
